...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayPlanner">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dayplanner_items"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toTopOf="@+id/dayplanner_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/routeplan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="sendRoutePlan"
        android:text="ROUTE PLAN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearDayPlannerBtn"
        android:layout_width="wrap_content"
...
