...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Directions">


    <TextView
        android:id="@+id/directionsSet"
        android:layout_width="355dp"
        android:layout_height="532dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="92dp"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn" />

    <Button
...
